@@ -7,5 +7,10 @@ this repository contains the full copyright notices and license terms. -->
     <label name="company"/>
     <field name="company"/>
 
+    <label name="empty_quantity"/>
+    <field name="empty_quantity"/>
+    <label name="complete_lines"/>
+    <field name="complete_lines"/>
+
     <field name="locations" colspan="4" view_ids="stock.location_view_list"/>
 </form>
